fix: make slider visible when less than 4 items are present

--- a/src/pages/homePage/propertyDetailsWithSlider.module.scss
+++ b/src/pages/homePage/propertyDetailsWithSlider.module.scss
@@ -1,3 +1,20 @@
+.property-container {
+  position: relative;
+  padding-top: 125px;
+
+  .btn-goBack {
+    position: absolute;
+    top: 64px;
+    left: 0;
+    background: none;
+    border: none;
+
+    svg {
+      width: 32px;
+    }
+  }
+}
+
 .real-estate {
   display: grid;
   grid-template-columns: 839px 1fr;
